Usando posicionamento CSS também. Armazenando as imagens localmente. Colocando rodapés com autores de músicas.

--- a/css/fontes.css
+++ b/css/fontes.css
@@ -24,3 +24,8 @@
     font-family: "Royal";
     src: url(../fontes/Royal-7B3K.ttf) format("truetype");
 }
+
+@font-face {
+    font-family: "Cyber Rock";
+    src: url(../fontes/CyberRockRegular-nRJRg.ttf) format("truetype");
+}
